--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ body {
   display: flex;
   justify-content: space-between;
   margin-top: 1rem;
+  margin: 1rem 2rem;
 }
 
 .hero-content {
@@ -168,7 +169,6 @@ body {
   height: 2rem;
   color: rgb(0, 0, 0);
 }
-
 #instagram {
   border: solid black;
   border-width: 1px;
@@ -177,7 +177,6 @@ body {
   height: 2rem;
   color: rgb(0, 0, 0);
 }
-
 #twitter {
   border: solid black;
   border-width: 1px;
@@ -187,26 +186,17 @@ body {
   color: rgb(0, 0, 0);
 }
 
-.hero-container {
-  position: relative;
-  width: 500px; /* Ajuste para o tamanho desejado */
-  height: 500px;
-}
 .hero-ambient-image {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  left: 400px;
+  width: 70%;
   border-top-left-radius: 5.25rem;
   border-bottom-right-radius: 5.25rem;
   border-bottom-left-radius: 2rem;
   border-top-right-radius: 2rem;
 }
 .hero-image-plate {
-  position: relative;
-  top: 80%; /* Ajusta a posição vertical */
-  left: 50%; /* Ajusta a posição horizontal */
-  transform: translate(-50%, -50%); /* Centraliza a imagem sobreposta */
-  width: 150px; /* Ajuste conforme necessário */
+  position: absolute;
+  left: 63.5%;
+  transform: translate(-75%, -105%); /* Centraliza a imagem sobreposta */
+  width: 255px; /* Ajuste conforme necessário */
+  z-index: 1;
 }
