--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ body {
   transform: translate(1%, -115%);
   width: 12.3%;
   z-index: -1;
-
+}
 
 .our-special-dishes {
   display: flex;
@@ -250,5 +250,43 @@ body {
   font-size: 1rem;
   color: #5c6574;
   font-family: inter;
+}
 
+.welcome-to-our-restaurant {
+  background-color: #eeefef;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+}
+
+.welcome-content {
+  display: flex;
+
+  gap: 3rem;
+  max-width: 50%;
+  flex-direction: column;
+  margin: 5rem;
+}
+
+.welcome-title {
+  font-size: 2.8rem;
+  color: #101a24;
+  font-family: david libre;
+}
+
+.welcome-text {
+  font-size: 1rem;
+  font-family: inter;
+  color: #5c6574;
+}
+
+.welcome-buttons {
+  display: flex;
+  gap: 1.563rem;
+}
+
+.welcome-image img {
+  margin-left: 5rem;
+  margin-top: -100px;
+  width: 70%;
 }
