--- a/css/style.css
+++ b/css/style.css
@@ -303,6 +303,7 @@ body {
   justify-content: space-between;
   flex-direction: row-reverse;
   align-items: center;
+  padding: 2rem 10rem;
 }
 
 .welcome-content {
@@ -333,4 +334,22 @@ body {
 .welcome-plate {
   margin-left: 5rem;
   width: 50%;
+}
+
+.first-plant-our-special-dishes {
+  position: absolute;
+  transform: translate(147%, -354%);
+  width: 15%;
+}
+
+.second-plant-our-special-dishes {
+  position: absolute;
+  transform: translate(525%, -300%);
+  width: 12%;
+}
+
+.third-plant-our-special-dishes {
+  position: absolute;
+  transform: translate(220%, -20%);
+  width: 20%;
 }
