--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,6 @@ body {
   position: absolute;
   transform: translate(220%, -20%);
   width: 20%;
-
 }
 
 .welcome-to-our-restaurant {
@@ -388,5 +387,4 @@ body {
   position: absolute;
   transform: translate(840%, 280%);
   width: 7%;
-
-
+}
