--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,6 @@
   padding: 0;
 }
 
-header {
-}
-
 body {
   overflow-x: hidden;
   height: 100dvh;
@@ -231,9 +228,6 @@ body {
   padding: 5rem 2rem;
 }
 
-.our-special-dishes-content {
-}
-
 .our-special-dishes-title {
   text-align: center;
   font-family: "David Libre", serif;
@@ -412,3 +406,142 @@ body {
   margin-top: 1.313rem;
 }
 
+.newsletter-subscribe {
+  margin-top: 12.5rem;
+  margin-bottom: 100px;
+}
+.newsletter-subscribe-title {
+  text-align: center;
+  font-family: "David Libre", serif;
+  color: #ffffff;
+  font-size: 2.5rem;
+  margin-bottom: 3.563rem;
+  position: absolute;
+}
+
+.newsletter-subscribe-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.newsletter-subscribe-image {
+  width: 70%;
+  border-radius: 1.875rem;
+}
+
+.stylized-input {
+  position: absolute;
+  font-family: "Inter";
+  padding: 1.438rem;
+  padding-right: 18.125rem;
+  border: 0rem;
+  border-radius: 0.938rem;
+  margin-top: 12.5rem;
+}
+
+.newsletter-subscribe-button {
+  padding: 0.813rem 1.25rem;
+  border-radius: 0.5rem;
+  background-color: #ea6d27;
+  color: #fff;
+  font-family: "Inter", serif;
+  font-weight: bold;
+  position: absolute;
+  margin-left: 21.875rem;
+  border: 0rem;
+  margin-top: 12.5rem;
+}
+
+.footer {
+  width: 100%;
+}
+
+.footer-content {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  background-color: #ffffff;
+  margin-left: 8rem;
+  margin-right: 8rem;
+}
+
+.footer-list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.72rem;
+  list-style: none;
+  padding: 30px;
+  margin-left: 25px;
+}
+
+.footer-list ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  gap: 15px;
+}
+
+.footer-list .footer-link {
+  font-family: "Inter";
+  color: #5c6574;
+  display: flex;
+}
+
+.list-title {
+  font-family: "Inter";
+  color: #101a24;
+  margin-bottom: 15px;
+  font-size: 17px;
+}
+
+.footer-about-text {
+  font-family: "Inter";
+  color: #5c6574;
+  font-size: 15px;
+}
+
+.footer-copyright {
+  display: flex;
+  background-color: #ffffff;
+  color: #5c6574;
+  align-items: center;
+  justify-content: left;
+  margin-left: 8rem;
+  margin-right: 8rem;
+  margin-top: 1.5rem;
+}
+
+.footer-about {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 4px;
+}
+
+.footer-about img {
+  width: 60%;
+}
+
+.opening-list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.72rem;
+  list-style: none;
+}
+
+.footer-text {
+  font-family: "Inter";
+  color: #5c6574;
+  font-size: 15px;
+}
+
+.footer-line-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 2rem;
+}
