--- a/css/style.css
+++ b/css/style.css
@@ -315,7 +315,7 @@ body {
   justify-content: space-between;
   flex-direction: row-reverse;
   align-items: center;
-  padding: 15rem 10rem;
+  padding: 5rem 10rem;
 }
 
 .welcome-content {
@@ -384,13 +384,12 @@ body {
 }
 
 .our-happy-customers {
-  padding: 200px;
+  padding: 10rem;
   text-align: center;
   background-color: #eeefef;
 }
 
 .our-happy-customers-content {
-  
 }
 
 .our-happy-customers-title {
@@ -408,7 +407,6 @@ body {
   margin-top: 1.313rem;
 }
 
-
 .our-happy-customers-flex {
   display: flex;
   justify-content: center;
@@ -421,27 +419,27 @@ body {
   text-align: center;
   flex-direction: column;
   box-shadow: 0 0.25rem 0.625rem rgba(0, 0, 0, 0.08);
-  border-top-left-radius: 80px;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 80px;
-  border-bottom-left-radius: 30px;
+  border-top-left-radius: 5rem;
+  border-top-right-radius: 1.875rem;
+  border-bottom-right-radius: 5rem;
+  border-bottom-left-radius: 1.875rem;
   background-color: #ffffff;
-  margin-top: 100px;
-  width: 500px;
-  height: 2rem
-  gap: 20px;
+  margin-top: 6.25rem;
+  width: 31.25rem;
+  height: 2rem;
+  gap: 1.25rem;
 }
 
 .our-happy-customers-person-image {
   position: absolute;
   width: 8%;
   border-radius: 50%;
-  margin-top: -18rem ;
+  margin-top: -18rem;
 }
 
 .stars {
-  padding: 5px;
-  margin-top: 50px;
+  padding: 0.313rem;
+  margin-top: 3.125rem;
 }
 
 .our-happy-customers-review {
@@ -453,17 +451,18 @@ body {
 }
 
 .our-happy-customers-name {
-  margin-top: 30px;
+  margin-top: 1.875rem;
 }
 
 .highlight-name {
   font-weight: bold;
   font-family: "Inter";
   color: black;
+}
 
 .newsletter-subscribe {
-  margin-top: 12.5rem;
-  margin-bottom: 100px;
+  margin-top: 10rem;
+  margin-bottom: 6.25rem;
 }
 .newsletter-subscribe-title {
   text-align: center;
@@ -527,15 +526,15 @@ body {
   flex-direction: column;
   gap: 0.72rem;
   list-style: none;
-  padding: 30px;
-  margin-left: 25px;
+  padding: 1.875rem;
+  margin-left: 1.563rem;
 }
 
 .footer-list ul {
   display: flex;
   flex-direction: column;
   list-style: none;
-  gap: 15px;
+  gap: 0.938rem;
 }
 
 .footer-list .footer-link {
@@ -547,14 +546,14 @@ body {
 .list-title {
   font-family: "Inter";
   color: #101a24;
-  margin-bottom: 15px;
-  font-size: 17px;
+  margin-bottom: 0.938rem;
+  font-size: 1.063rem;
 }
 
 .footer-about-text {
   font-family: "Inter";
   color: #5c6574;
-  font-size: 15px;
+  font-size: 0.938rem;
 }
 
 .footer-copyright {
@@ -571,8 +570,8 @@ body {
 .footer-about {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  margin-top: 4px;
+  gap: 1.25rem;
+  margin-top: 0.25rem;
 }
 
 .footer-about img {
@@ -589,7 +588,7 @@ body {
 .footer-text {
   font-family: "Inter";
   color: #5c6574;
-  font-size: 15px;
+  font-size: 0.938rem;
 }
 
 .footer-line-container {
@@ -599,5 +598,4 @@ body {
   align-items: center;
   text-align: center;
   margin-top: 2rem;
-
 }
