--- a/css/style.css
+++ b/css/style.css
@@ -305,7 +305,7 @@ body {
 
 .third-plant-our-special-dishes {
   position: absolute;
-  transform: translate(220%, -20%);
+  transform: translate(-30%, -20%);
   width: 20%;
 }
 
@@ -322,7 +322,7 @@ body {
   display: flex;
   gap: 3rem;
   flex-direction: column;
-  margin-right: 11rem;
+  margin-right: 5rem;
   margin-top: 11.25rem;
 }
 
@@ -344,48 +344,48 @@ body {
 }
 
 .welcome-plate {
-  margin-left: 5rem;
   width: 50%;
 }
 
 .seventh-plant {
   position: absolute;
-  transform: translate(400%, 20%);
+  transform: translate(327%, 20%);
   width: 20%;
 }
 .welcome-fourth-plant {
   position: absolute;
-  transform: translate(465%, -100%);
+  transform: translate(315%, -100%);
   width: 12%;
 }
 
 .leaf-green {
   position: absolute;
-  transform: translate(405%, -197%);
-  width: 12%;
+  transform: translate(330%, -190%);
+  width: 10%;
 }
 
 .second-leaf-green {
   position: absolute;
-  transform: translate(133%, -53%);
-  width: 7%;
+  transform: translate(45%, -53%);
+  width: 6%;
 }
 
 .piece-of-garlic-image {
   position: absolute;
-  transform: translate(725%, 203%);
+  transform: translate(480%, 203%);
   width: 7%;
 }
 
 .garlic-image {
   position: absolute;
-  transform: translate(840%, 280%);
-  width: 7%;
+  transform: translate(730%, 330%);
+  width: 6%;
 }
 
 .our-happy-customers {
   text-align: center;
   background-color: #eeefef;
+  padding-top: 8rem;
 }
 
 .our-happy-customers-content {
@@ -422,6 +422,11 @@ body {
   width: 31.25rem;
   height: 25rem;
   gap: 1.25rem;
+  transition: transform 0.3s ease-in-out;
+}
+
+.slide:hover {
+  transform: scale(0.9);
 }
 
 .carousel {
@@ -495,6 +500,7 @@ input[type="radio"] {
   align-items: center;
   gap: 15rem;
   margin-left: 32rem;
+  transition-duration: 0.5s;
 }
 
 .our-happy-customers-review {
